[tool.poetry]
name = "48ix-stats"
version = "0.0.1"
description = "48 IX Statistics API"
authors = ["checktheroads <matt@48ix.net>"]
license = "MIT"

[tool.poetry.dependencies]
aiosqlite = "^0.15.0"
argon2_cffi = "^20.1.0"
click = "^7.1"
fastapi = "^0"
httpx = "^0"
loguru = "^0.4"
passlib = "^1.7.2"
pendulum = "^2.1"
pydantic = "^1.5"
python = "^3.7"
pyyaml = "^5.3"
rich = "^3.0"
rpyc = "^4.1.5"
tortoise-orm = "^0.16.15"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
uvloop = "^0.14.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-deprecated = "^1.3"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
isort = "^5.5.2"
pep8-naming = "^0.10.0"
pre-commit = "^2.6.0"
stackprinter = "^0.2.3"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

